Added full width navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,13 +13,22 @@
   color: white;
 }
 
+.App-body{
+  font-size: calc(10px + 2vmin);
+  min-height: 100vh;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .App-link {
   color: #61dafb;
+  display: block;
 }
 
 .image-container {
   display: inline-block;
-  width: 35%;
+  width: 50%;
   /* border: 1px solid red;  */
 }
 
