--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,30 @@
   color: white;
 }
 
+.slide-header {
+  width: 63%;
+  position: absolute;
+  
+background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(34,34,91,1) 35%, rgba(40,44,52,1) 100%); 
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
+}
+
 .App-body{
   font-size: calc(10px + 2vmin);
   min-height: 100vh;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  position: relative; /*this makes overflow hidden work for absolutely positioned child elements */
+  overflow-x: hidden;
 }
 
 .App-link {
